--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       19/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 235 points<br>
+Unlocked       19/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 239 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -18,6 +18,7 @@ Unlocked       19/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Banker (Level 2)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 2)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
+<li><div class="title">Apprentice Blacksmith (Level 3)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Butcher (Level 1)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 2)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Apprentice Butcher (Level 3)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
@@ -77,27 +78,28 @@ Unlocked       19/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-5390 branch
- 322 status
- 164 commit
- 151 add
+5491 branch
+ 326 status
+ 167 commit
+ 153 add
  139 push
- 102 checkout
-  69 rebase
+ 108 checkout
+  71 rebase
   63 diff
-  41 fetch
+  43 fetch
   37 log
   20 submodule
+  20 remote
   17 stash
-  17 remote
    9 achievements
    7 config
    6 gc
+   4 rm
    4 blame
-   3 rm
    3 mv
    2 reset
    2 help
+   1 shortlog
    1 revert
    1 pull
    1 merge
