--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Aziz Shamim's Git Achievements <img src='http://www.gravatar.com/avatar/e7e0385c2168e773d80fdccb2b8dd4b8'/></h2>
-Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 298 points<br>
+Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 303 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -60,6 +60,7 @@ Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 6)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -89,19 +90,19 @@ Unlocked       20/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-10434 branch
- 590 status
+10481 branch
+ 593 status
  283 add
  253 commit
  188 push
- 161 checkout
- 102 rebase
-  91 diff
+ 163 checkout
+ 106 rebase
+  95 diff
   69 fetch
   56 log
   25 remote
   24 stash
-  21 submodule
+  22 submodule
   12 !git
   10 config
    9 achievements
